--- a/front/Tablero/tablero.html
+++ b/front/Tablero/tablero.html
@@ -76,7 +76,7 @@
             <!-- 9 -->
             <tr>
               <td>9</td>
-              <td colspan="4" rowspan="4"><img src="profe.jpeg" /></td>
+              <td colspan="4" rowspan="4"><img src="portada.jpeg" /></td>
               <td>59</td>
             </tr>
             <!-- 10 -->
